# grasper

./: .env  .env.example  .gitignore  30,000_Movies.twbx  COOKIE_AUTH.md  Dockerfile  README.md  auth_example.py  debug_answer_agent.py  frontend.py  functionality.md  killl.sh  pipelone.md  plan.md  pyproject.toml  run.py  run.sh  setup.sh  start.sh  start_grasper.sh  test_html_handler.py  test_html_integration.py  tests
.github/prompts/: project_plan.prompt.md
app/: main.py  payload_handler.py  routes.py
app/agent/: analyzer.py  analyzer_agent.py  answer_agent.py  data_agent.py  executor.py  exp.py  file_analysis_handler.py  file_manager.py  files_download_agent.py  html_analyzer.py  html_handler.py  media_analyzer.py  media_handler.py  orchestrater.py  utils.py
app/config/: __init__.py  llm_models.py  prompts.py  settings.py
app/models/: prompts.py  schemas.py
tests/: questions.txt  test.py
tests/sample-network/: promptfoo.yaml  question.txt
tests/sample-sales/: question.txt
tests/sample-weather/: question.txt
tmp/215b70bdbc/: analysis_report.txt  answer_analysis.py
tmp/21b236ab84/: analysis_report.txt  answer_analysis.py  weather_analysis_scrape.py
tmp/f2219115f9/: analysis_report.txt  answer_analysis.py
