[project]
name = "grasper"
version = "0.1.0"
description = "AI-powered data analysis agent with PydanticAI, DuckDB, and OpenAI Codex integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[duckduckgo,google,mcp]",
    "google-generativeai",
    "duckdb",
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "numpy",
    "playwright",
    "httpx",
    "aiofiles",
    "asyncio-throttle",
    "tenacity",
    "loguru",
    "python-multipart",
    "openpyxl",
    "pyarrow",
    "plotly",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "beautifulsoup4",
    "lxml",
    "polars",
    "logfire[fastapi]",
    "psutil",
    "python-dotenv",
    "boilerpy3",
    "networkx",
    "streamlit>=1.48.0",
    "chardet>=5.2.0",
    "crawl4ai>=0.7.3",
    "pymupdf>=1.24.0",
    "pyjwt>=2.10.1",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "api", "processors", "monitoring"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

